Content: prevent horizontal overflows

--- a/theme/static/styles/components/content.scss
+++ b/theme/static/styles/components/content.scss
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   position: relative;
 
   ::selection {
